--- a/web-booking-react/src/global.scss
+++ b/web-booking-react/src/global.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
-    font-size: 23px;
+    font-size: 20px;
     font-family: "Inter";
     font-weight: 400;
     line-height: 1.2;
