--- a/web-booking-react/src/modules/ShowCase/components/SortAndFiltersPanel/Filters/style.scss
+++ b/web-booking-react/src/modules/ShowCase/components/SortAndFiltersPanel/Filters/style.scss
@@ -1,12 +1,12 @@
-.filter-container {
+.filters {
     width: 100%;
     background-color: #26a9e0;
     height: 100%;
-}
 
-.filter-button {
-    height: 100%;
-    width: 250px;
+    &__button {
+        height: 100%;
+        width: 250px;
+    }
 
     &__apply {
         color: white;
